recallable/tests/ui/derive_fail_recallable_field_not_simple_generic.rs
use recallable::Recallable;

#[derive(Recallable)]
struct InvalidNestedRecallableType<T> {
    #[recallable]
    value: Option<T>,
}

fn main() {}
